--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
-<title>chiquyet199</title>
+
+<head>
+  <meta charset="UTF-8">
+  <title>Página de prueba
+    <title>
+</head>
 
 <body>
-
-  <h1>This is a heading</h1>
-  <p>This is a paragraph.</p>
-
+  <h1>Hola amiguitos!</h1>
+  <footer>gpuma 2017</footer>
 </body>
 
 </html>
