--- a/index.html
+++ b/index.html
@@ -3,13 +3,11 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Página de prueba
-    <title>
+  <title>chiquyet199</title>
 </head>
 
 <body>
-  <h1>Hola amiguitos!</h1>
-  <footer>gpuma 2017</footer>
+  <h1>Hello</h1>
 </body>
 
 </html>
