--- a/index.html
+++ b/index.html
@@ -164,22 +164,22 @@
       }
     }
 
-    .work-experience-list li {
+    .list li {
       width: 100%;
       padding: 0 10px;
       margin-bottom: 30px;
     }
 
-    .secondary-work-experience-list > li {
+    .secondary-list > li {
       padding: 5px 0;
       margin-left: 10px;
     }
 
-    .tertiary-work-experience-list {
+    .tertiary-list {
       list-style: square;
       margin-left: 15px;
     }
-    .tertiary-work-experience-list > li {
+    .tertiary-list > li {
       margin: 0 0 5px 10px;
     }
 
@@ -220,15 +220,16 @@
       <h1>Nguyen Chi Quyet</h1>
       <h2>javascript lover</h2>
       <address class="contact-info">
-        <a href="" itemprop="telephone" target="_blank" class="phone-number">0909620992</a>
-        <a href="mailto:chiquyet199@gmail.com" itemprop="email" target="_blank" class="email-address">chiquyet199@gmail.com</a>
-        <a href="https://github.com/chiquyet199" itemprop="url" target="_blank" class="icon">
+        <a href="" target="_blank" class="phone-number">0909620992</a>
+        <a href="mailto:chiquyet199@gmail.com" target="_blank" class="email-address">chiquyet199@gmail.com</a>
+        <a href="https://chiquyet199.github.io/" target="_blank" class="email-address">https://chiquyet199.github.io/</a>
+        <a href="https://github.com/chiquyet199" target="_blank" class="icon">
           <i class="fab fa-github fa-lg"></i>
         </a>
-        <a href="https://www.linkedin.com/in/cqpro/" itemprop="url" target="_blank" class="icon">
+        <a href="https://www.linkedin.com/in/cqpro/" target="_blank" class="icon">
           <i class="fab fa-linkedin fa-lg"></i>
         </a>
-        <a href="https://codepen.io/cqpro/" itemprop="url" target="_blank" class="icon">
+        <a href="https://codepen.io/cqpro/" target="_blank" class="icon">
           <i class="fab fa-codepen fa-lg"></i>
         </a>
       </address>
@@ -260,7 +261,7 @@
       <main>
         <section class="experience-section">
           <h1>Career Objective</h1>
-          <ul class="work-experience-list">
+          <ul class="list">
             <li>
                Having more than 5 years of working with JS and it's frameworks and contribute to successful of many products like Singapore
               Airline website using Jquery, Muang Thai Insuarance app & webapp using React and React Native, Heartbeat chrome extension
@@ -289,17 +290,17 @@
         </section>
         <section class="experience-section">
           <h1>Professional Work Experience</h1>
-          <ul class="work-experience-list">
+          <ul class="list">
             <li>
               <div class="organization-heading">
                 <a href="https://wearefram.com" title="fram^">
-                  <h2 itemprop="name" class="organization-name">fram^</h2>
+                  <h2 class="organization-name">fram^</h2>
                 </a>
               </div>
               <span class="organization-dates">Aug 2018 - Present</span>
               <div>
                 <h3 class="position-title">Principal JavaScript Developer</h3>
-                <ul class="tertiary-work-experience-list">
+                <ul class="tertiary-list">
                   <li>Working on a language platform named Lingio http://lingio.co/ aim to help immigrants learn Swedish</li>
                   <li>Use HTML, Stylus, JavaScript and ReactJS to enhance the design and user experience</li>
                   <li>Collaborate with team members on UI/UX ideas for existing and new products</li>
@@ -311,14 +312,14 @@
             </li>
             <li>
               <div class="organization-heading">
-                <a href="https://wearefram.com" title="fram^">
-                  <h2 itemprop="name" class="organization-name">Aleph Lab</h2>
+                <a href="http://www.aleph-labs.com/contact-us/vietnam" title="aleph-labs">
+                  <h2 class="organization-name">Aleph Lab</h2>
                 </a>
               </div>
               <span class="organization-dates">Nov 2017 - Aug 2018 (Work in Bangkok - Thailand)</span>
               <div>
                 <h3 class="position-title">Senior Frontend Developer</h3>
-                <ul class="tertiary-work-experience-list">
+                <ul class="tertiary-list">
                   <li>Making app using React Native and webapp using ReactJS for Muang Thai Insuarance company</li>
                   <li>Plan, architecture the whole app and webapp from scratch</li>
                   <li>Build skeleton, make based, reusable components for team members to work on</li>
@@ -329,14 +330,14 @@
             </li>
             <li>
               <div class="organization-heading">
-                <a href="https://wearefram.com" title="fram^">
-                  <h2 itemprop="name" class="organization-name">RITVN</h2>
+                <a href="https://ritvn.com/" title="ritvn">
+                  <h2 class="organization-name">RITVN</h2>
                 </a>
               </div>
               <span class="organization-dates">Jan 2016 - Nov 2017</span>
               <div>
                 <h3 class="position-title">Developer</h3>
-                <ul class="tertiary-work-experience-list">
+                <ul class="tertiary-list">
                   <li>Building Chrome Extension named HeartBeat for youtuber, using React to build report page and NodeJS for api</li>
                   <li>Work in internal project name Casewhere, handon every parts of the project, from configuration to Api (using C#) to Worker site (using Angular JS)</li>
                   <li>Participate in analyse requirement, designing, modeling, to implementation and unit test.</li>
@@ -346,27 +347,39 @@
             </li>
             <li>
               <div class="organization-heading">
-                <a href="https://wearefram.com" title="fram^">
-                  <h2 itemprop="name" class="organization-name">Sutrix Media</h2>
+                <a href="http://sutrixgroup.com/" title="sutrixgroup">
+                  <h2 class="organization-name">Sutrix Media</h2>
                 </a>
               </div>
               <span class="organization-dates">Apr 2014 - Jan 2016</span>
               <h3 class="position-title">JavaScript Developer</h3>
-              <ul class="tertiary-work-experience-list">
+              <ul class="tertiary-list">
                 <li>Mostly work on website projects like HolyBikini, Prudential, Singapore Airline</li>
                 <li>Responsible coding functions, animations using JQuery.</li>
               </ul>
             </li>
           </ul>
         </section>
-        <section style="margin-top: 50px" class="experience-section">
+        <section style="margin-top: 40px" class="experience-section">
           <h1>Other stuffs</h1>
-          <ul class="work-experience-list">
+          <ul class="list">
             <li>Javascript instructor at <a href="https://nordiccoder.com/khoa-hoc-online/xay-dung-spa-shopping-cart-js-thuan">Nordic Coder (https://nordiccoder.com/khoa-hoc-online/xay-dung-spa-shopping-cart-js-thuan)</a></li>
             <li>Freelancer at <a href="https://pangara.com/">Pangara</a></li>
             <li>More fun stuffs at <a href="https://codepen.io/cqpro/">Codepen (https://codepen.io/cqpro)</a></li>
             <li>And here <a href="https://github.com/chiquyet199">Github (https://github.com/chiquyet199)</a></li>
             <li>TOEIC scored of 670</li>
+          </ul>
+        </section>
+        <section class="experience-section">
+          <h1>Projects </h1>
+          <ul class="list">
+            <li>Casewhere (internal project)</li>
+            <li>T-shirt design (internal project)</li>
+            <li>Muang Thai Insurance (Waiting for Apple to approval)</li>
+            <li>Lingio <a href="https://play.lingio.com/">(https://play.lingio.com/)</a></li>
+            <li>Singapore Airline <a href="https://www.singaporeair.com/">(https://www.singaporeair.com/)</a></li>
+            <li>Prudential <a href="https://www.prudential.com.vn/en/">(https://www.prudential.com.vn/en/)</a></li>
+            <li>Heartbeat Chrome Ext <a href="https://chrome.google.com/webstore/detail/heartbeat/aailiojlhjbichheofhdpcongebcgcgm">(https://chrome.google.com/webstore/detail/heartbeat/aailiojlhjbichheofhdpcongebcgcgm)</a></li>
           </ul>
         </section>
       </main>
