--- a/index.html
+++ b/index.html
@@ -263,10 +263,10 @@
           <h1>Career Objective</h1>
           <ul class="list">
             <li>
-               Having more than 5 years of working with JS and it's frameworks and contribute to successful of many products like Singapore
-              Airline website using Jquery, Muang Thai Insuarance app & webapp using React and React Native, Heartbeat chrome extension
+               I have more than 5 years experience working with JS and its frameworks and contributed to the success of many products like Singapore
+              Airlines website using Jquery, Muang Thai Insuarance app & webapp using React and React Native, Heartbeat chrome extension
               using vanilla JS, Lingio web-app and it's related management app using React, VueJS, Selenium, NodeJs and some
-              other internal projects using AngularJS, ExtJS, Canvas, SVG... . Im eager to have new challenge and I believe that I'm your best fit.
+              other internal projects using AngularJS, ExtJS, Canvas, SVG... . I'm eager to have new challenges and I believe that I'm your best fit.
             </li>
           </ul>
         </section>
