Fix layout on mobile

--- a/index.html
+++ b/index.html
@@ -71,6 +71,11 @@
       display: block;
       margin-bottom: 5px;
     }
+    .list > li{
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
     .icon{
       margin: 0 5px
     }
