Fix phone number

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
       <h1>Nguyen Chi Quyet</h1>
       <h2>javascript lover</h2>
       <address class="contact-info">
-        <a href="" target="_blank" class="phone-number">0909620992</a>
+        <a href="" target="_blank" class="phone-number">(+84) 909620992</a>
         <a
           href="mailto:chiquyet199@gmail.com"
           target="_blank"
