--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         display: block;
         margin-bottom: 5px;
       }
-      .list > li {
+      .stuffs > li {
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
@@ -250,7 +250,9 @@
       <h1>Nguyen Chi Quyet</h1>
       <h2>javascript lover</h2>
       <address class="contact-info">
-        <a href="" target="_blank" class="phone-number">(+84) 909620992</a>
+        <a href="" target="_blank" class="phone-number"
+          >(+84) 909620992</a
+        >
         <a
           href="mailto:chiquyet199@gmail.com"
           target="_blank"
@@ -496,7 +498,7 @@
       </section>
       <section style="margin-top: 40px" class="experience-section">
         <h1>Other stuffs</h1>
-        <ul class="list">
+        <ul class="list stuffs">
           <li>
             Javascript instructor at
             <a
@@ -525,7 +527,7 @@
       </section>
       <section class="experience-section">
         <h1>Projects</h1>
-        <ul class="list">
+        <ul class="list stuffs">
           <li>Casewhere (internal project)</li>
           <li>T-shirt design (internal project)</li>
           <li>
