--- a/index.html
+++ b/index.html
@@ -302,9 +302,7 @@
               Native, Heartbeat chrome extension using vanilla JS,
               Lingio web-app and it's related management app using
               React, VueJS, Selenium, NodeJs and some other internal
-              projects using AngularJS, ExtJS, Canvas, SVG... . I'm
-              eager to have new challenges and I believe that I'm your
-              best fit.
+              projects using AngularJS, ExtJS, Canvas, SVG... .
             </p>
           </li>
         </ul>
