--- a/index.html
+++ b/index.html
@@ -374,6 +374,33 @@
         <ul class="list">
           <li>
             <div class="organization-heading">
+              <a href="https://nordiccoder.com/" title="nordiccoder">
+                <h2 class="organization-name">Nordic Coder</h2>
+              </a>
+            </div>
+            <span class="organization-dates">Dec 2018 - Present</span>
+            <div>
+              <h3 class="position-title">
+                Javascript Instructor
+              </h3>
+              <ul class="tertiary-list">
+                <li>
+                  Teaching classes of 10-20 students (Could be student, junior developer, developers from other languages want to learn JS) about JS and ReactJS.
+                </li>
+                <li>
+                  Review code for student exercises and final project, ensure code quality. 
+                </li>
+                <li>
+                  Making online courses about Javascript
+                </li>
+                <li>
+                  Present various topics about Javascript and ReactJS at NordicCoder workshop in order to attrack more student to join class.
+                </li>
+              </ul>
+            </div>
+          </li>
+          <li>
+            <div class="organization-heading">
               <a href="https://wearefram.com" title="fram^">
                 <h2 class="organization-name">fram^</h2>
               </a>
