--- a/index.html
+++ b/index.html
@@ -547,7 +547,6 @@
               >Github (https://github.com/chiquyet199)</a
             >
           </li>
-          <li>TOEIC scored of 670</li>
         </ul>
       </section>
       <section class="experience-section">
@@ -556,7 +555,10 @@
           <li>Casewhere (internal project)</li>
           <li>T-shirt design (internal project)</li>
           <li>
-            Muang Thai Insurance (Waiting for Apple to approval)
+            Muang Thai Insurance 
+            <a href="https://apps.apple.com/us/app/mtl-smile-plus/id1440560140?ign-mpt=uo%3D2"
+              >(https://apps.apple.com/us/app/mtl-smile-plus/id1440560140?ign-mpt=uo%3D2)</a
+            >
           </li>
           <li>
             Lingio
