--- a/index.html
+++ b/index.html
@@ -286,6 +286,13 @@
         >
           <i class="fab fa-codepen fa-lg"></i>
         </a>
+        <a
+          href="https://medium.com/@cqpro"
+          target="_blank"
+          class="icon"
+        >
+          <i class="fab fa-medium fa-lg"></i>
+        </a>
       </address>
     </header>
 
@@ -524,6 +531,14 @@
       <section style="margin-top: 40px" class="experience-section">
         <h1>Other stuffs</h1>
         <ul class="list stuffs">
+          <li>
+            Writer at
+            <a
+              href="https://medium.com/@cqpro"
+              >Medium
+              (https://medium.com/@cqpro)</a
+            >
+          </li>
           <li>
             Javascript instructor at
             <a
