--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
         <h1>Other stuffs</h1>
         <ul class="list stuffs">
           <li>
-            Writer at
+            Writer on
             <a
               href="https://medium.com/@cqpro"
               >Medium
